--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ng": "ng",
     "rimraf": "rimraf",
     "changelog": "standard-changelog",
-    "start": "ng serve",
+    "start": "ng serve --port 3000",
     "start:hmr": "ng serve --hmr",
     "start:aot": "ng serve --aot",
     "start:prod": "ng serve --prod",
@@ -56,6 +56,7 @@
     "amcharts3": "github:amcharts/amcharts3",
     "ammap3": "github:amcharts/ammap3",
     "angular2-datatable": "0.6.0",
+    "angular2-jwt": "^0.2.3",
     "animate.css": "3.5.2",
     "bootstrap": "4.0.0-alpha.6",
     "chart.js": "1.1.1",
@@ -83,6 +84,8 @@
     "normalize.css": "6.0.0",
     "roboto-fontface": "0.7.0",
     "rxjs": "5.1.1",
+    "sweetalert": "^1.1.3",
+    "sweetalert2": "^6.6.4",
     "zone.js": "0.8.5"
   },
   "devDependencies": {
